--- a/static/menu.html
+++ b/static/menu.html
@@ -29,6 +29,7 @@
     </div>
   </main>
 
+  <script src="audio-manager.js"></script>
   <script src="menu.js"></script>
   <script src="_shooting_stars_helper.js"></script>
 </body>
