--- a/static/ranking.html
+++ b/static/ranking.html
@@ -20,6 +20,9 @@
 
   <main class="panel center-panel" style="max-width:900px">
     <h2 class="title-big">RANKING GERAL</h2>
+    <div id="userInfo" class="user-info" style="margin-bottom: 20px; padding: 15px; background: rgba(0,0,0,0.3); border-radius: 8px; text-align: center;">
+      <p class="subtitle" id="welcomeUser">Bem-vindo ao Ranking!</p>
+    </div>
     <table class="ranking-table" id="rankingTable">
       <thead><tr><th>#</th><th>Nome</th><th>Pontos</th></tr></thead>
       <tbody></tbody>
@@ -30,6 +33,7 @@
     </div>
   </main>
 
+  <script src="audio-manager.js"></script>
   <script src="ranking.js"></script>
   <script src="_shooting_stars_helper.js"></script>
 </body>
