--- a/static/register.html
+++ b/static/register.html
@@ -24,10 +24,9 @@
 
     <form id="registerForm" class="register-form" autocomplete="off">
 
-      <label><input id="name_input" type="text" placeholder="Nome completo" required></label>
       <label><input id="email_input" type="email" placeholder="E-mail" required></label>
       <label><input id="login_reg_input" type="text" placeholder="Usuário" required></label>
-      <label><input id="password_reg_input" type="text" placeholder="Senha" required></label>
+      <label><input id="password_reg_input" type="password" placeholder="Senha" required></label>
 
       <div class="btn-row" style="margin-top:12px">
         <button class="btn big" type="submit">Criar</button>
@@ -38,6 +37,7 @@
     <p class="small muted">Já tem conta? <a href="login.html">Entrar</a></p>
   </main>
 
+  <script src="audio-manager.js"></script>
   <script src="register.js"></script>
   <script src="_shooting_stars_helper.js"></script>
 </body>
