--- a/static/game.html
+++ b/static/game.html
@@ -42,6 +42,7 @@
     </footer>
   </main>
 
+  <script src="audio-manager.js"></script>
   <script src="game.js"></script>
   <script src="_shooting_stars_helper.js"></script>
 </body>
