--- a/static/gameover.html
+++ b/static/gameover.html
@@ -28,6 +28,7 @@
     </div>
   </main>
 
+  <script src="audio-manager.js"></script>
   <script src="gameover.js"></script>
   <script src="_shooting_stars_helper.js"></script>
 </body>
