--- a/static/login.html
+++ b/static/login.html
@@ -42,6 +42,7 @@
     </div>
   </main>
 
+  <script src="audio-manager.js"></script>
   <script src="login.js"></script>
   <script src="_shooting_stars_helper.js"></script>
 </body>
