feat: Added new quiz templates and JS/Python questions controllers.

--- a/static/menu.html
+++ b/static/menu.html
@@ -24,6 +24,7 @@
 
     <div class="btn-row" style="flex-direction:column; gap:12px">
       <button class="btn big" id="btnStart">Iniciar Jogo</button>
+      <button class="btn big ghost" id="btnQuiz">Quiz de Conhecimentos</button>
       <button class="btn big ghost" id="btnRanking">Ranking</button>
       <button class="btn big ghost" id="btnLogout">Sair</button>
     </div>
