--- a/static/menu.html
+++ b/static/menu.html
@@ -23,8 +23,7 @@
     <p id="welcomeText" class="subtitle">Bem-vindo!</p>
 
     <div class="btn-row" style="flex-direction:column; gap:12px">
-      <button class="btn big" id="btnStart">Iniciar Jogo</button>
-      <button class="btn big ghost" id="btnQuiz">Quiz de Conhecimentos</button>
+      <button class="btn big" id="btnQuiz">Iniciar Jogo</button>
       <button class="btn big ghost" id="btnRanking">Ranking</button>
       <button class="btn big ghost" id="btnLogout">Sair</button>
     </div>
