--- a/static/quiz.html
+++ b/static/quiz.html
@@ -36,12 +36,13 @@
         <br>
         <label>
           <select id="categoria" name="categoria" style="width: 100%; padding: 8px; background: rgba(0,0,0,0.3); border: 1px solid var(--neon-cyan); color: white; font-family: 'Press Start 2P', monospace; font-size: 10px;">
-            <option value="9" selected>Gerais</option>
-            <option value="18">TI</option>
-            <option value="17">Biológicas</option>
-            <option value="19">Exatas</option>
-            <option value="22">Geografia</option>
-            <option value="23">História</option>
+            <option value="geral" selected>Gerais</option>
+            <option value="humanas">Humanas</option>
+            <option value="exatas">Exatas</option>
+            <option value="biologicas">Biológicas</option>
+            <option value="geografia">Geografia</option>
+            <option value="historia">História</option>
+            <option value="tecnologia">TI</option>
           </select>
         </label>
       </div>
