Add 'gerais' category and update DB schema for users
Added 'gerais' as a new ranking category in both backend and frontend. Updated the database schema to include a new 'usuarios' table and improved index creation for quiz results. Also changed the database password in config.py and ensured the correct answer is returned in the quiz service response.

--- a/static/ranking.html
+++ b/static/ranking.html
@@ -26,6 +26,7 @@
         Categoria:
         <select id="categoria-ranking" style="margin-left: 10px; padding: 5px; background: rgba(0,0,0,0.3); border: 1px solid var(--neon-cyan); color: white; font-family: 'Press Start 2P', monospace; font-size: 10px;">
           <option value="geral">Geral</option>
+          <option value="gerais">Gerais</option>
           <option value="humanas">Humanas</option>
           <option value="exatas">Exatas</option>
           <option value="biologicas">Biológicas</option>
