feat: Added BD Trigger features.

--- a/static/login.html
+++ b/static/login.html
@@ -26,7 +26,7 @@
     <div class="login" aria-label="Login">
       <div class="fields">
         <label>
-          <input id="email" type="text" maxlength="60" name="email" placeholder="e-mail ou usuário" autocomplete="username">
+          <input id="email" type="text" maxlength="60" name="email" placeholder="usuário" autocomplete="username">
         </label>
         <br>
         <label>
