mudancas de icon flutuantes e ajustes para melhor visibildade de letra

--- a/static/login.html
+++ b/static/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Show do Tabareli</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,12 +24,12 @@
     <p class="subtitle">Faça login para jogar</p>
 
     <div class="login" aria-label="Login">
-      <div class="fields">
-        <label>
+      <div class="fields2">
+        <label class="lable-login">
           <input id="email" type="text" maxlength="60" name="email" placeholder="usuário" autocomplete="username">
         </label>
         <br>
-        <label>
+        <label class="lable-login shield">
           <input id="pwd" type="password" maxlength="32" name="pwd" placeholder="senha" autocomplete="current-password">
         </label>
       </div>
@@ -38,7 +38,7 @@
         <button class="btn big" id="btnLogin">Entrar</button>
       </div>
 
-      <p class="small muted">Não tem conta? <a href="register.html">Crie conta</a></p>
+      <p class="small muted">Não tem conta? <a style="text-decoration: none; color: aqua;" href="register.html">Criar conta</a></p>
     </div>
   </main>
 
