--- a/static/quiz.html
+++ b/static/quiz.html
@@ -26,7 +26,7 @@
 
     <div class="login" aria-label="Configuração do Quiz">
       <div class="fields">
-        <label>
+        <label class="quizada">
           <select id="dificuldade" name="dificuldade" style="width: 100%; padding: 8px; background: rgba(0,0,0,0.3); border: 1px solid var(--neon-cyan); color: white; font-family: 'Press Start 2P', monospace; font-size: 10px;">
             <option value="easy" selected>Fácil</option>
             <option value="medium">Médio</option>
@@ -34,7 +34,7 @@
           </select>
         </label>
         <br>
-        <label>
+        <label class="quizada">
           <select id="categoria" name="categoria" style="width: 100%; padding: 8px; background: rgba(0,0,0,0.3); border: 1px solid var(--neon-cyan); color: white; font-family: 'Press Start 2P', monospace; font-size: 10px;">
             <option value="geral" selected>Gerais</option>
             <option value="humanas">Humanas</option>
@@ -51,7 +51,7 @@
         <button class="btn big" id="iniciar-quiz">Iniciar Quiz</button>
       </div>
 
-      <p class="small muted"><a href="menu.html">← Voltar ao Menu</a></p>
+      <p class="small muted"><a style="text-decoration: none; color: aqua;" href="menu.html">Voltar ao Menu</a></p>
     </div>
   </main>
 
