--- a/static/login.html
+++ b/static/login.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Show do Tabareli</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Show do Tabareli</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div class="scene">
     <div class="stars"></div>
@@ -20,17 +22,21 @@
   </div>
 
   <main class="panel center-panel" role="main">
-    <h1 class="title-big">SHOW<br>DO<br>TABARELI</h1>
+    <div class="title-wrapper">
+      <h1 class="title-big">SHOW<br />DO<br />TABARELI</h1>
+      <img src="img/taba-removebg-preview.png" alt="Tabareli" class="tabareli-img" />
+    </div>
     <p class="subtitle">Faça login para jogar</p>
 
     <div class="login" aria-label="Login">
       <div class="fields2">
         <label class="lable-login">
-          <input id="email" type="text" maxlength="60" name="email" placeholder="usuário" autocomplete="username">
+          <input id="email" type="text" maxlength="60" name="email" placeholder="usuário" autocomplete="username" />
         </label>
-        <br>
+        <br />
         <label class="lable-login shield">
-          <input id="pwd" type="password" maxlength="32" name="pwd" placeholder="senha" autocomplete="current-password">
+          <input id="pwd" type="password" maxlength="32" name="pwd" placeholder="senha"
+            autocomplete="current-password" />
         </label>
       </div>
 
@@ -38,11 +44,15 @@
         <button class="btn big" id="btnLogin">Entrar</button>
       </div>
 
-      <p class="small muted">Não tem conta? <a style="text-decoration: none; color: aqua;" href="register.html">Criar conta</a></p>
+      <p class="small muted">
+        Não tem conta?
+        <a style="text-decoration: none; color: aqua" href="register.html">Criar conta</a>
+      </p>
     </div>
   </main>
 
   <script src="login.js"></script>
   <script src="_shooting_stars_helper.js"></script>
 </body>
+
 </html>
